--- a/Guestbook/war/stylesheets/main.css
+++ b/Guestbook/war/stylesheets/main.css
@@ -1,5 +1,57 @@
-
 body {
    font-family: Verdana, Helvetica, sans-serif;
-   background-color: #FFFFCC;
+   background-color: #BC8F8F;
+   cursor: url(/paw.gif), auto;
+}
+
+.blogpost{
+	background-color: rgba(255, 255, 255, 0.5); 
+	margin: 7px;
+	padding: 10px;
+}
+
+.author-date{
+	font-size: 12px;
+	padding-bottom: 10px;
+	border-bottom: solid #e7e7e7 4px;
+}
+
+.title{
+	font-weight: bold;
+	text-transform: uppercase; 
+	font-size: 25px;
+	margin: 15px 0px 15px 0px;
+}
+
+a {
+	text-decoration: none; 
+	color: black; 
+	cursor: url(/paw.gif), auto;
+}
+
+button{
+	background: white; 
+	cursor: url(/paw.gif), auto;
+	width: calc(95%/4);
+	display: float;
+}
+
+.button-header{
+	width: 100%;
+	margin-left: 8px;
+}
+
+button:hover{
+	background: #e7e7e7;
+}
+
+input{
+	background: white; 
+	cursor: url(/paw.gif), auto;
+	width: calc(95%/4);
+	display: float;
+}
+
+input:hover{
+	background: #e7e7e7;
 }
